force-app/main/default/objects/RGC_Request_Portal__c/RGC_Request_Portal__c.object-meta.xml
<CustomObject>
    <label>RGC Request Portal</label>
    <nameField>
        <displayFormat>RP-{00}</displayFormat>
        <label>RGC Request Portal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RGC Request Portals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>