force-app/main/default/objects/RGC_Request_Portal__c/fields/Agreements__c.field-meta.xml
<CustomField>
    <fullName>Agreements__c</fullName>
    <label>Agreements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>