force-app/main/default/objects/RGC_Request_Portal__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <referenceTo>RGC_Lead__c</referenceTo>
    <relationshipLabel>RGC Request Portals</relationshipLabel>
    <relationshipName>RGC_Request_Portals</relationshipName>
    <type>Lookup</type>
</CustomField>