force-app/main/default/objects/RGC_Request_Portal__c/fields/Assigned_to_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Legacy__c</fullName>
    <label>Assigned to (Legacy)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>