force-app/main/default/objects/RGC_Request_Portal__c/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <label>Association</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Age</fullName>
            </value>
            <value>
                <fullName>Blood Pressure</fullName>
            </value>
            <value>
                <fullName>Fungal Infections</fullName>
            </value>
            <value>
                <fullName>Liver Disease</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>VTE</fullName>
            </value>
            <value>
                <fullName>DTE</fullName>
            </value>
            <value>
                <fullName>Type 2 Diabetes</fullName>
            </value>
            <value>
                <fullName>Type 1 Diabetes</fullName>
            </value>
            <value>
                <fullName>PheWAS</fullName>
            </value>
            <value>
                <fullName>Lysosomal Disease</fullName>
            </value>
            <value>
                <fullName>Coagulation</fullName>
            </value>
            <value>
                <fullName>PAH</fullName>
            </value>
            <value>
                <fullName>Renal Disease</fullName>
            </value>
            <value>
                <fullName>Bone Mineral Density</fullName>
            </value>
            <value>
                <fullName>Hand Grip Strength</fullName>
            </value>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>COPD</fullName>
            </value>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>Infection</fullName>
            </value>
            <value>
                <fullName>Atopic dermatitis</fullName>
            </value>
            <value>
                <fullName>Skin Disorders</fullName>
            </value>
            <value>
                <fullName>Scleroderma</fullName>
            </value>
            <value>
                <fullName>Fibrotic disease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>