force-app/main/default/objects/RGC_Request_Portal__c/fields/Business_Priority_Justification__c.field-meta.xml
<CustomField>
    <fullName>Business_Priority_Justification__c</fullName>
    <inlineHelpText>Please elaborate on the business priority, including the impact and any critical deadlines (maximum 3 sentences)</inlineHelpText>
    <label>Business Priority &amp; Justification</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>