force-app/main/default/objects/RGC_Request_Portal__c/fields/Case_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Case_Criteria__c</fullName>
    <label>Case Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>