force-app/main/default/objects/RGC_Request_Portal__c/fields/Challenge__c.field-meta.xml
<CustomField>
    <fullName>Challenge__c</fullName>
    <inlineHelpText>Please provide a high level description of your technical challenge (maximum 3 sentences)</inlineHelpText>
    <label>Challenge</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>