force-app/main/default/objects/RGC_Request_Portal__c/fields/Cohorts__c.field-meta.xml
<CustomField>
    <fullName>Cohorts__c</fullName>
    <label>Cohorts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>