force-app/main/default/objects/RGC_Request_Portal__c/fields/Contributor_Names__c.field-meta.xml
<CustomField>
    <fullName>Contributor_Names__c</fullName>
    <label>Contributor Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>