force-app/main/default/objects/RGC_Request_Portal__c/fields/Control_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Control_Criteria__c</fullName>
    <label>Control Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>