force-app/main/default/objects/RGC_Request_Portal__c/fields/Counts_of_Controls__c.field-meta.xml
<CustomField>
    <fullName>Counts_of_Controls__c</fullName>
    <label>Counts of Controls</label>
    <length>255</length>
    <type>Text</type>
</CustomField>