force-app/main/default/objects/RGC_Request_Portal__c/fields/File_Upload__c.field-meta.xml
<CustomField>
    <fullName>File_Upload__c</fullName>
    <label>File Upload</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>