force-app/main/default/objects/RGC_Request_Portal__c/fields/For_Meeting__c.field-meta.xml
<CustomField>
    <fullName>For_Meeting__c</fullName>
    <label>For Meeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>