force-app/main/default/objects/RGC_Request_Portal__c/fields/Government_Funding__c.field-meta.xml
<CustomField>
    <fullName>Government_Funding__c</fullName>
    <label>Government Funding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I dont know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>