force-app/main/default/objects/RGC_Request_Portal__c/fields/Meeting_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Requirement__c</fullName>
    <label>Meeting Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invention Review Meeting requested (with patent counsel)</fullName>
            </value>
            <value>
                <fullName>Urgent Invention Review Meeting requested (with patent counsel)</fullName>
            </value>
            <value>
                <fullName>No meeting necessary at this time- for tracking purposes only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>