force-app/main/default/objects/RGC_Request_Portal__c/fields/Molecule__c.field-meta.xml
<CustomField>
    <fullName>Molecule__c</fullName>
    <inlineHelpText>(e.g., itepekimab for IL33 antibody, fianlimab for LAG-3 antibody, etc.)</inlineHelpText>
    <label>Molecule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>