force-app/main/default/objects/RGC_Request_Portal__c/fields/Name_of_the_File__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_File__c</fullName>
    <label>Name of the File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>