force-app/main/default/objects/RGC_Request_Portal__c/fields/OutcomeNext_Steps__c.field-meta.xml
<CustomField>
    <fullName>OutcomeNext_Steps__c</fullName>
    <label>Outcome/Next Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>