force-app/main/default/objects/RGC_Request_Portal__c/fields/Phenotype_Stage__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Stage__c</fullName>
    <label>Phenotype Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stage 1 (created by requestor)</fullName>
            </value>
            <value>
                <fullName>Stage 2 (need to be created by CI)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>