force-app/main/default/objects/RGC_Request_Portal__c/fields/Potential_Disclosures__c.field-meta.xml
<CustomField>
    <fullName>Potential_Disclosures__c</fullName>
    <label>Potential Disclosures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>