force-app/main/default/objects/RGC_Request_Portal__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <inlineHelpText>(e.g., Eylea, Dupixent, Libtayo, etc.)</inlineHelpText>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>