force-app/main/default/objects/RGC_Request_Portal__c/fields/REGN_No__c.field-meta.xml
<CustomField>
    <fullName>REGN_No__c</fullName>
    <inlineHelpText>(e.g., REGN6569 for GITR antibody, REGN5458 for BCMA x CD3 antibody, etc.)</inlineHelpText>
    <label>REGN No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>