force-app/main/default/objects/RGC_Request_Portal__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <label>Requestor Email</label>
    <type>Email</type>
</CustomField>