force-app/main/default/objects/RGC_Request_Portal__c/fields/Research_Group__c.field-meta.xml
<CustomField>
    <fullName>Research_Group__c</fullName>
    <label>Research Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RGC- Regeneron Genetics Center</fullName>
            </value>
            <value>
                <fullName>ADC &amp; ARC</fullName>
            </value>
            <value>
                <fullName>Analytical Chemistry</fullName>
            </value>
            <value>
                <fullName>Assay Development / Bioassay</fullName>
            </value>
            <value>
                <fullName>Bioanalytical Strategy Group</fullName>
            </value>
            <value>
                <fullName>Biostatistics and Data Management</fullName>
            </value>
            <value>
                <fullName>Bispecifics</fullName>
            </value>
            <value>
                <fullName>Blood Fibrosis</fullName>
            </value>
            <value>
                <fullName>Clinical – Cardiovascular &amp; Metabolism</fullName>
            </value>
            <value>
                <fullName>Clinical – Immunology &amp; Inflammation</fullName>
            </value>
            <value>
                <fullName>Clinical – Oncology &amp; Translational Sciences</fullName>
            </value>
            <value>
                <fullName>Early Clinical Development and Experimental Sciences</fullName>
            </value>
            <value>
                <fullName>Genomic Engineering Technology</fullName>
            </value>
            <value>
                <fullName>Global Study Strategy &amp; Optimization</fullName>
            </value>
            <value>
                <fullName>Infectious Diseases</fullName>
            </value>
            <value>
                <fullName>IOPS</fullName>
            </value>
            <value>
                <fullName>IOPS – Devices</fullName>
            </value>
            <value>
                <fullName>Molecular Profiling and Bioinformatics</fullName>
            </value>
            <value>
                <fullName>Neuroscience</fullName>
            </value>
            <value>
                <fullName>OB, Metabolic &amp; Muscle Diseases</fullName>
            </value>
            <value>
                <fullName>Oligo Therapy</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>PDPC – Analytical Chemistry</fullName>
            </value>
            <value>
                <fullName>PDPC – Bioanalytical Sciences</fullName>
            </value>
            <value>
                <fullName>PDPC – Formulation Development</fullName>
            </value>
            <value>
                <fullName>PDPC – Preclinical Manufacturing &amp; Process Development</fullName>
            </value>
            <value>
                <fullName>PES – Protein Expression Sciences</fullName>
            </value>
            <value>
                <fullName>Pharmacology / PK</fullName>
            </value>
            <value>
                <fullName>Pharmacometrics</fullName>
            </value>
            <value>
                <fullName>PMPD – Preclinical Manufacturing &amp; Process Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>