force-app/main/default/objects/RGC_Request_Portal__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>What_request_are_you_submitting__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Look-up Requested</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Analysis Ongoing</fullName>
            </value>
            <value>
                <fullName>Completed - Follow-up Needed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>