force-app/main/default/objects/RGC_Request_Portal__c/fields/Submission_Title__c.field-meta.xml
<CustomField>
    <fullName>Submission_Title__c</fullName>
    <label>Submission Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>