force-app/main/default/objects/RGC_Request_Portal__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <label>Submitter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>