force-app/main/default/objects/RGC_Request_Portal__c/fields/TargetSubject__c.field-meta.xml
<CustomField>
    <fullName>TargetSubject__c</fullName>
    <inlineHelpText>(e.g., ANGPTL3, IL4R, VEGF, etc.)</inlineHelpText>
    <label>Target/Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>