force-app/main/default/objects/RGC_Request_Portal__c/fields/Tech_Center_TFA_Head__c.field-meta.xml
<CustomField>
    <fullName>Tech_Center_TFA_Head__c</fullName>
    <label>Tech Center/ TFA Head</label>
    <length>255</length>
    <type>Text</type>
</CustomField>