force-app/main/default/objects/RGC_Request_Portal__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Antibody Format</fullName>
            </value>
            <value>
                <fullName>Analytical Platform</fullName>
            </value>
            <value>
                <fullName>Antibody Discovery</fullName>
            </value>
            <value>
                <fullName>Cellular Immunity Rodents</fullName>
            </value>
            <value>
                <fullName>CRISPR</fullName>
            </value>
            <value>
                <fullName>Gene Variants</fullName>
            </value>
            <value>
                <fullName>Precision Medicine</fullName>
            </value>
            <value>
                <fullName>Recombineering Technologies</fullName>
            </value>
            <value>
                <fullName>Retargeted Viruses</fullName>
            </value>
            <value>
                <fullName>Rodent Disease and Biochemistry Models</fullName>
            </value>
            <value>
                <fullName>T Cell Technologies</fullName>
            </value>
            <value>
                <fullName>VelociHum Rodents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>