force-app/main/default/objects/RGC_Request_Portal__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <label>Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>Agnostic</fullName>
            </value>
            <value>
                <fullName>Auditory</fullName>
            </value>
            <value>
                <fullName>Cardiovascular/Fibrosis</fullName>
            </value>
            <value>
                <fullName>Connective Tissue Diseases</fullName>
            </value>
            <value>
                <fullName>Immune &amp; Inflammation</fullName>
            </value>
            <value>
                <fullName>Immune Oncology</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Neuroscience</fullName>
            </value>
            <value>
                <fullName>Obesity, Muscle &amp; Metabolism</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Regeneron Genetics Medicine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>