force-app/main/default/objects/RGC_Request_Portal__c/fields/Top_Level_Classification__c.field-meta.xml
<CustomField>
    <fullName>Top_Level_Classification__c</fullName>
    <label>Top Level Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturing Technologies</fullName>
            </value>
            <value>
                <fullName>Rodent Technologies</fullName>
            </value>
            <value>
                <fullName>Platform Technologies (Non manufacturing/non-mouse)</fullName>
            </value>
            <value>
                <fullName>Therapeutics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>