force-app/main/default/objects/RGC_Request_Portal__c/fields/Type_of_Phenotype__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Phenotype__c</fullName>
    <label>Type of Phenotype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>QT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>