force-app/main/default/objects/RGC_Request_Portal__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>RGC</fullName>
            </value>
            <value>
                <fullName>Sr Mgmt</fullName>
            </value>
            <value>
                <fullName>TFA - Discovery</fullName>
            </value>
            <value>
                <fullName>TFA - Target Nomination</fullName>
            </value>
            <value>
                <fullName>TFA - TRAIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>