force-app/main/default/objects/RGC_Request_Portal__c/fields/What_request_are_you_submitting__c.field-meta.xml
<CustomField>
    <fullName>What_request_are_you_submitting__c</fullName>
    <label>What request are you submitting?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom Clinical Data Request</fullName>
            </value>
            <value>
                <fullName>Custom Phenotype Request</fullName>
            </value>
            <value>
                <fullName>ROAD Topic Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>