force-app/main/default/objects/RGC_Request_Portal__c/fields/Workflows_or_Processes_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Workflows_or_Processes_Impacted__c</fullName>
    <label>Workflows or Processes Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RGC Analyses</fullName>
            </value>
            <value>
                <fullName>Browser Uploads</fullName>
            </value>
            <value>
                <fullName>RGC Production Pipeline</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>