force-app/main/default/objects/RGC_Request_Portal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>What_request_are_you_submitting__c</columns>
    <columns>Submitter__c</columns>
    <columns>Workflows_or_Processes_Impacted__c</columns>
    <columns>Date_of_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>What_request_are_you_submitting__c</field>
        <operation>equals</operation>
        <value>ROAD Topic Submission</value>
    </filters>
    <label>All</label>
</ListView>