force-app/main/default/objects/RGC_Request_Portal__c/listViews/Custom_Phenotypes.listView-meta.xml
<ListView>
    <fullName>Custom_Phenotypes</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Submitter__c</columns>
    <columns>Submission_Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>What_request_are_you_submitting__c</field>
        <operation>equals</operation>
        <value>Custom Phenotype Request</value>
    </filters>
    <label>Custom Phenotypes</label>
</ListView>